# cyoa

./: .gitignore  README.md  package-lock.json  package.json  render.yaml  server.js
.github/workflows/: build.yml
archive/: .gitignore
archive/backend/: .dockerignore  pyproject.toml
archive/backend/common/: db.py  init_db.py  models.py
archive/backend/modal_endpoint/: service_archive.py
archive/backend/server/: .envrc  README.md
archive/backend/story_service/: .envrc  README.md  fly.toml  pyproject.toml
archive/backend/story_service/app/: settings.py  story.py
archive/frontend/: .envrc  Dockerfile.frontend  eslint.config.mjs  index.html  tsconfig.json  vite.config.ts
archive/frontend/src/: App.tsx  index.tsx
backend/: .env.example  Dockerfile.api  Dockerfile.cyoa  Makefile  README.md  docker-compose.yml  init_db.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  services.py  stories.ipynb  story.ipynb  workflow.py
backend/app/: dependencies.py  main.py  settings.py
backend/app/db/: helpers.py  models.py
backend/app/helpers/: restate.py
backend/app/image_service/: flux.py  service.py
backend/app/modal_service/: service.py
backend/app/models/: stories.py
backend/app/restate_service/: continuation_workflow.py  restate_service.py  story.py  story_workflow.py  workflow.py
backend/app/stories/: router.py
backend/common/: db.py  init_db.py  models.py  settings.py
backend/cyoa/: cyoa.py  db.py  models.py  server.py  settings.py  workflow.py
backend/db/: init.sql
backend/modal_endpoint/: service.py
backend/server/: Dockerfile  fly.toml  pyproject.toml
backend/server/app/: dependencies.py  main.py  settings.py
backend/server/app/helpers/: db.py  restate.py
backend/server/app/stories/: models.py  router.py
backend/story_service/: .dockerignore  Dockerfile  fly.toml  pyproject.toml
backend/story_service/app/: continuation.py  helpers.py  models.py  settings.py  story.py
frontend/: .eslintrc.json  README.md  bun.lockb  drizzle.config.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/migrations/: 0000_faulty_gambit.sql  0000_mysterious_enchantress.sql
frontend/migrations/meta/: 0000_snapshot.json  _journal.json
frontend/public/: index.html
frontend/src/: App.js  App.tsx  auth.ts  index.css  index.tsx  middleware.ts
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/blog/: article.md
frontend/src/components/: StoryForm.js  StoryForm.tsx  StoryShare.tsx  carousel-button.tsx  carousel.tsx  choicelink.tsx  emptystate.tsx  header.tsx  signin.tsx  storycard.tsx  storydialog.tsx  storylist.tsx  wrapper.tsx
frontend/src/constants/: prompts.ts  stories.json
frontend/src/db/: db.ts  (+1 more)
modal/: audio.py  download.py  generate_audio.py  images.py  pyproject.toml
modal/tests/: README.md  test_audio.py  test_images.py
modal/workflows/: flux.json
restate/: .gitignore  Dockerfile  fly.toml  main.py  pyproject.toml  story.ipynb
restate/helpers/: db.py  env.py  s3.py  story.py
restate/tests/: README.md  test_db.py  test_main.py  test_s3.py  test_story.py
src/: App.tsx
(+72 files in other folders)
