[project]
name = "modal-service"
version = "0.1.0"
description = "Modal Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.90",
    "diffusers>=0.32.1",
    "scipy>=1.14.1",
    "soundfile>=0.12.1",
    "torch>=2.5.1",
    "transformers>=4.47.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.1",
]
