[project]
name = "restate-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.97",
    "hypercorn>=0.17.3",
    "instructor[google-generativeai]>=1.7.2",
    "libsql-experimental>=0.0.41",
    "pydantic-settings>=2.7.0",
    "restate-sdk>=0.4.1",
]
