[project]
name = "restate-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.97",
    "hypercorn>=0.17.3",
    "instructor[google-generativeai]>=1.7.2",
    "libsql-client>=0.3.1",
    "pydantic-settings>=2.7.0",
    "restate-sdk>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.11.1",
]
