[project]
name = "story-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.63",
    "hypercorn>=0.17.3",
    "instructor>=1.6.3",
    "pydantic-settings>=2.6.0",
    "requests>=2.32.3",
    "restate-sdk>=0.4.1",
    "sqlalchemy-libsql>=0.1.0",
    "sqlmodel>=0.0.22",
]
